<?xml version="1.0"?>
<package format="3">
  <name>hsrb_servomotor_protocol</name>
  <version>2.0.0</version>
  <description>Servomotor drivers for HSR-B.</description>

  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <author>Keisuke Takeshita</author>
  <author>Takafumi Mizuno</author>
  <author>Tamaki Nishino</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>boost</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
